# OffensiveRust

./: README.md
dump_lsass/: Cargo.toml  README.md
dump_lsass/src/: main.rs  utils.rs
